Commencemnt de l'implémentation de l'api
